--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 	<HEAD>
 		<meta charset="utf8">
 		<title>Сайт web-студії "Web-DECO"</title>
+	<style>
+		.shadowtext{
+		text-shadow: 1px 3px 2px white, 0 0 1em red;
+		color:#210042;
+		font-size: 2em;
+		}
+	</style>
+		
+		
+		
 	</HEAD>
 	<BODY>
 		<BODY background="images/bg.jpg">
